--- a/client/src/index.css
+++ b/client/src/index.css
@@ -46,6 +46,13 @@ body {
     radial-gradient(at 50% 150%, hsla(339,49%,30%,1) 0, transparent 50%);
 }
 
+.gradient-bg-donation {
+  background-color: #6187e0;
+  background-image: 
+    radial-gradient(at 0% 0%, rgb(145, 140, 191) 0, transparent 80%), 
+    radial-gradient(at 50% 100%, rgb(145, 122, 155) 0, transparent 80%);
+}
+
 .blue-glassmorphism {
   background: rgb(39, 51, 89, 0.4);
   border-radius: 16px;
